--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ hr {
 
 .forecastToggle {
     display: none;
+    align-self: flex-end;
 }
 
 #result {
@@ -34,6 +35,7 @@ hr {
 
 #settings {
     margin-top: 0%; 
+    margin-bottom: 0%;
     text-align: right;
 }
 
